--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -32,8 +32,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SQLite.Designer, Version=1.0.98.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>sqlite_x86\SQLite.Designer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite, Version=1.0.98.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>sqlite_x86\System.Data.SQLite.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.SQLite.EF6, Version=1.0.98.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>sqlite_x86\System.Data.SQLite.EF6.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.SQLite.Linq, Version=1.0.98.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>sqlite_x86\System.Data.SQLite.Linq.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,12 +60,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dbManager.cs" />
     <Compile Include="DocumentManager.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DocumentManager.Designer.cs">
       <DependentUpon>DocumentManager.cs</DependentUpon>
     </Compile>
+    <Compile Include="Files.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="DocumentManager.resx">
@@ -77,7 +95,24 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="sqlite_x64\SQLite.Designer.dll" />
+    <Content Include="sqlite_x64\SQLite.Interop.dll" />
+    <Content Include="sqlite_x64\System.Data.SQLite.dll" />
+    <Content Include="sqlite_x64\System.Data.SQLite.EF6.dll" />
+    <Content Include="sqlite_x64\System.Data.SQLite.Linq.dll" />
+    <Content Include="sqlite_x86\SQLite.Designer.dll" />
+    <Content Include="sqlite_x86\SQLite.Interop.dll" />
+    <Content Include="sqlite_x86\System.Data.SQLite.dll" />
+    <Content Include="sqlite_x86\System.Data.SQLite.EF6.dll" />
+    <Content Include="sqlite_x86\System.Data.SQLite.Linq.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(ProjectDir)sqlite_x64\SQLite.Interop.dll" "$(TargetDir)x64\" /Y
+xcopy "$(ProjectDir)sqlite_x86\SQLite.Interop.dll" "$(TargetDir)x86\" /Y</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
