--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Files.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VDirs.cs" />
     <EmbeddedResource Include="DocumentManager.resx">
       <DependentUpon>DocumentManager.cs</DependentUpon>
     </EmbeddedResource>
