--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -68,11 +68,20 @@
       <DependentUpon>DocumentManager.cs</DependentUpon>
     </Compile>
     <Compile Include="Files.cs" />
+    <Compile Include="NewVDir.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewVDir.Designer.cs">
+      <DependentUpon>NewVDir.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VDirs.cs" />
     <EmbeddedResource Include="DocumentManager.resx">
       <DependentUpon>DocumentManager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewVDir.resx">
+      <DependentUpon>NewVDir.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
