add new functions
- connected add new file and add new directory into the main menu
- added move directory function
- added content strip directory add possibility

--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -68,6 +68,12 @@
       <DependentUpon>DocumentManager.cs</DependentUpon>
     </Compile>
     <Compile Include="Files.cs" />
+    <Compile Include="MoveVDirs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MoveVDirs.Designer.cs">
+      <DependentUpon>MoveVDirs.cs</DependentUpon>
+    </Compile>
     <Compile Include="NewVDir.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +85,9 @@
     <Compile Include="VDirs.cs" />
     <EmbeddedResource Include="DocumentManager.resx">
       <DependentUpon>DocumentManager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MoveVDirs.resx">
+      <DependentUpon>MoveVDirs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NewVDir.resx">
       <DependentUpon>NewVDir.cs</DependentUpon>
