--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -82,6 +82,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenameVDir.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RenameVDir.Designer.cs">
+      <DependentUpon>RenameVDir.cs</DependentUpon>
+    </Compile>
     <Compile Include="VDirs.cs" />
     <EmbeddedResource Include="DocumentManager.resx">
       <DependentUpon>DocumentManager.cs</DependentUpon>
@@ -101,6 +107,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RenameVDir.resx">
+      <DependentUpon>RenameVDir.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
