--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -60,6 +60,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdvancedSearch.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdvancedSearch.Designer.cs">
+      <DependentUpon>AdvancedSearch.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ASCriteria.cs" />
     <Compile Include="dbManager.cs" />
     <Compile Include="DocumentManager.cs">
       <SubType>Form</SubType>
@@ -96,6 +103,9 @@
     </Compile>
     <Compile Include="SqlCommandExt.cs" />
     <Compile Include="VDirs.cs" />
+    <EmbeddedResource Include="AdvancedSearch.resx">
+      <DependentUpon>AdvancedSearch.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DocumentManager.resx">
       <DependentUpon>DocumentManager.cs</DependentUpon>
     </EmbeddedResource>
