--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -94,6 +94,12 @@
     <Compile Include="RenameVDir.Designer.cs">
       <DependentUpon>RenameVDir.cs</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Settings.Designer.cs">
+      <DependentUpon>Settings.cs</DependentUpon>
+    </Compile>
     <Compile Include="SqlCommandExt.cs" />
     <Compile Include="VDirs.cs" />
     <EmbeddedResource Include="DocumentManager.resx">
@@ -119,6 +125,9 @@
     </Compile>
     <EmbeddedResource Include="RenameVDir.resx">
       <DependentUpon>RenameVDir.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Settings.resx">
+      <DependentUpon>Settings.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
