--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -68,6 +68,7 @@
       <DependentUpon>DocumentManager.cs</DependentUpon>
     </Compile>
     <Compile Include="Files.cs" />
+    <Compile Include="ListViewColumnSorter.cs" />
     <Compile Include="MoveFilesToDir.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,6 +102,7 @@
       <DependentUpon>Settings.cs</DependentUpon>
     </Compile>
     <Compile Include="SqlCommandExt.cs" />
+    <Compile Include="Tags.cs" />
     <Compile Include="VDirs.cs" />
     <EmbeddedResource Include="DocumentManager.resx">
       <DependentUpon>DocumentManager.cs</DependentUpon>
