--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -60,6 +60,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="About.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="About.Designer.cs">
+      <DependentUpon>About.cs</DependentUpon>
+    </Compile>
     <Compile Include="dbManager.cs" />
     <Compile Include="DocumentManager.cs">
       <SubType>Form</SubType>
@@ -104,6 +110,9 @@
     <Compile Include="SqlCommandExt.cs" />
     <Compile Include="Tags.cs" />
     <Compile Include="VDirs.cs" />
+    <EmbeddedResource Include="About.resx">
+      <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DocumentManager.resx">
       <DependentUpon>DocumentManager.cs</DependentUpon>
     </EmbeddedResource>
