--- a/homework/homework.csproj
+++ b/homework/homework.csproj
@@ -72,15 +72,12 @@
     <Compile Include="AdvancedSearch.Designer.cs">
       <DependentUpon>AdvancedSearch.cs</DependentUpon>
     </Compile>
-    <Compile Include="ASCriteria.cs" />
-    <Compile Include="dbManager.cs" />
     <Compile Include="DocumentManager.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DocumentManager.Designer.cs">
       <DependentUpon>DocumentManager.cs</DependentUpon>
     </Compile>
-    <Compile Include="Files.cs" />
     <Compile Include="ListViewColumnSorter.cs" />
     <Compile Include="MoveFilesToDir.cs">
       <SubType>Form</SubType>
@@ -120,9 +117,6 @@
     <Compile Include="Settings.Designer.cs">
       <DependentUpon>Settings.cs</DependentUpon>
     </Compile>
-    <Compile Include="SqlCommandExt.cs" />
-    <Compile Include="Tags.cs" />
-    <Compile Include="VDirs.cs" />
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
     </EmbeddedResource>
@@ -172,18 +166,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Content Include="sqlite_x64\SQLite.Designer.dll" />
+    <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj">
+      <Project>{8fe9e5a7-d00c-4ea8-98ae-f0155664424b}</Project>
+      <Name>BusinessLogic</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="sqlite_x64\SQLite.Interop.dll" />
-    <Content Include="sqlite_x64\System.Data.SQLite.dll" />
-    <Content Include="sqlite_x64\System.Data.SQLite.EF6.dll" />
-    <Content Include="sqlite_x64\System.Data.SQLite.Linq.dll" />
-    <Content Include="sqlite_x86\SQLite.Designer.dll" />
     <Content Include="sqlite_x86\SQLite.Interop.dll" />
-    <Content Include="sqlite_x86\System.Data.SQLite.dll" />
-    <Content Include="sqlite_x86\System.Data.SQLite.EF6.dll" />
-    <Content Include="sqlite_x86\System.Data.SQLite.Linq.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
